language/move-lang/tests/move_check/locals/unused_resource.exp
error: 

   ┌── tests/move_check/locals/unused_resource.move:4:14 ───
   │
 4 │       fun t0() {
   │ ╭──────────────^
 5 │ │         let r = R{};
 6 │ │     }
   │ ╰─────^ Invalid return
   ·
 5 │         let r = R{};
   │             - The local 'r' still contains a resource value due to this assignment. The resource must be consumed before the function returns
   │

error: 

   ┌── tests/move_check/locals/unused_resource.move:5:13 ───
   │
 5 │         let r = R{};
   │             ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
   │

error: 

    ┌── tests/move_check/locals/unused_resource.move:8:24 ───
    │
 8 │       fun t1(cond: bool) {
    │ ╭────────────────────────^
 9 │ │         let r;
 10 │ │         if (cond) { r = R{}; };
 11 │ │     }
    │ ╰─────^ Invalid return
    ·
 10 │         if (cond) { r = R{}; };
    │                     - The local 'r' might still contain a resource value due to this assignment. The resource must be consumed before the function returns
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:10:21 ───
    │
 10 │         if (cond) { r = R{}; };
    │                     ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:13:24 ───
    │
 13 │       fun t2(cond: bool) {
    │ ╭────────────────────────^
 14 │ │         let r;
 15 │ │         if (cond) {} else { r = R{}; };
 16 │ │     }
    │ ╰─────^ Invalid return
    ·
 15 │         if (cond) {} else { r = R{}; };
    │                             - The local 'r' might still contain a resource value due to this assignment. The resource must be consumed before the function returns
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:15:29 ───
    │
 15 │         if (cond) {} else { r = R{}; };
    │                             ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:18:24 ───
    │
 18 │       fun t3(cond: bool) {
    │ ╭────────────────────────^
 19 │ │         let r;
 20 │ │         while (cond) { r = R{} };
 21 │ │     }
    │ ╰─────^ Invalid return
    ·
 20 │         while (cond) { r = R{} };
    │                        - The local 'r' might still contain a resource value due to this assignment. The resource must be consumed before the function returns
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:20:24 ───
    │
 20 │         while (cond) { r = R{} };
    │                        ^ Invalid assignment to local 'r'
    ·
 20 │         while (cond) { r = R{} };
    │                        - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:24:20 ───
    │
 24 │         loop { let r = R{}; }
    │                    ^ Unused assignment or binding for local 'r'. Consider removing or replacing it with '_'
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:24:20 ───
    │
 24 │         loop { let r = R{}; }
    │                    ^ Invalid assignment to local 'r'
    ·
 24 │         loop { let r = R{}; }
    │                    - The local might contain a resource value due to this assignment. The resource must be used before you assign to this local again
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:27:14 ───
    │
 27 │       fun t5() {
    │ ╭──────────────^
 28 │ │         let _ = &R{};
 29 │ │     }
    │ ╰─────^ Invalid return
    ·
 28 │         let _ = &R{};
    │                  --- The resource is created but not used. The resource must be consumed before the function returns
    │

error: 

    ┌── tests/move_check/locals/unused_resource.move:31:15 ───
    │
 31 │       fun t6<T>(x: T) {
    │ ╭─────────────────────^
 32 │ │     }
    │ ╰─────^ Invalid return
    ·
 31 │     fun t6<T>(x: T) {
    │               - The local 'x' might still contain a resource value due to this assignment. The resource must be consumed before the function returns
    │

